--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	fmalpartida/LiquidCrystal@^1.5.0
 	duinowitchery/hd44780@^1.3.2
 	me-no-dev/ESP Async WebServer@^1.2.3
+	adafruit/Adafruit FRAM I2C@^2.0.3
